k8s/galaxy-job-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: galaxy-job
spec:
  selector:
    matchLabels:
      app: galaxy-job
  replicas: 1
  template:
    metadata:
      labels:
        app: galaxy-job
    spec:
      containers:
        - name: galaxy-job
          image: "galaxy/galaxy:minimal"
          command: ["python", "/galaxy/server/scripts/galaxy-main"]
          args: ["-c", "/galaxy/server/config/galaxy.yml", "--server-name", "$(POD_NAME)", "--attach-to-pool", "job-handlers"]
          volumeMounts:
            - name: galaxy-job-conf-file
              mountPath: /galaxy/server/config/job_conf.xml
              subPath: job_conf.xml
            - name: galaxy-data
              mountPath: /galaxy/server/database/
      volumes:
        - name: galaxy-job-conf-file
          configMap:
            name: galaxy-job-conf
        - name: galaxy-data
          persistentVolumeClaim:
            claimName: galaxy-pv-claim
