k8s/galaxy-web-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: galaxy-web
spec:
  selector:
    matchLabels:
      app: galaxy-web
  replicas: 1
  template:
    metadata:
      labels:
        app: galaxy-web
    spec:
      containers:
        - name: galaxy-web
          image: "galaxy/galaxy:minimal"
          ports:
            - name: galaxy-http
              containerPort: 8080
          command: ["/galaxy/server/.venv/bin/uwsgi"]
          args: ["--yaml", "/galaxy/server/config/galaxy.yml"]
          volumeMounts:
            - name: galaxy-job-conf-file
              mountPath: /galaxy/server/config/job_conf.xml
              subPath: job_conf.xml
            - name: galaxy-data
              mountPath: /galaxy/server/database/
        # - name: nginx
        #   image: nginx
        #   lifecycle:
        #     preStop:
        #       exec:
        #         command: ["/usr/sbin/nginx","-s","quit"]
      volumes:
        - name: galaxy-job-conf-file
          configMap:
            name: galaxy-job-conf
        - name: galaxy-data
          persistentVolumeClaim:
            claimName: galaxy-pv-claim
