k8s/galaxy-service.yml
kind: Service
apiVersion: v1
metadata:
  name: galaxy
spec:
  type: NodePort
  selector:
    app: galaxy-web
  ports:
  - protocol: TCP
    port: 8090
    targetPort: galaxy-http
