k8s/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gpsql
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
   - port: 5432
  selector:
   app: postgres
