k8s/galaxy-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: galaxy-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      # - path: /galaxy/?(.*)
      - path: /
        backend:
          serviceName: galaxy
          servicePort: 8090
